# batchie

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rstcheck.project.cfg  Dockerfile  LICENSE  Makefile  README.md  main.nf  nextflow.config  pyproject.toml
.github/workflows/: containers.yml  python-unittest.yml
docs/: api.rst  command_line_interface.rst  conf.py  configuration.rst  data_format.rst  extension.rst  index.rst  install.rst  output_format.rst  quickstart.rst  requirements.txt  retrospective_experiments.rst  running.rst
integration_test/: pyro_test.py  sparse_combo.py
nextflow/config/: base.config  example_prospective.config  example_retrospective.config  gdsc_sq_retrospective_simulation.config  main.config  merck_retrospective_simulation.config  nci_almanac_retrospective_simulation.config  sarcoma_prospective.config  sarcoma_validation.config  sparse_drug_combo.config
nextflow/scripts/: batchie.py  run_retrospective_experiment.py  run_retrospective_simulation.py  test.yml
nextflow/tests/config/: integration_test_retrospective_simulation.config  pytest_modules.yaml  test_data.config
nextflow/tests/data/: distance_matrix.h5  experiment_tracker.json  masked_experiment.h5  masked_screen.h5  model_evaluation.h5  plate_selection.json  scores.h5  thetas.h5  unmasked_experiment.h5  unmasked_screen.h5
perf/: data_perf.py
perf/legacy_sparse_combo_model/: legacy_sparse_combo_model.py  prof.sh
perf/pdbal_scoring/: pdbal_scoring.py
perf/sparse_combo_model/: sparse_combo_model.py
src/batchie/: common.py  common_test.py  conftest.py  core.py  core_test.py  data.py  data_test.py  datasets.py  datasets_test.py  distance_calculation.py  distance_calculation_test.py  fast_mvn.py  fast_mvn_test.py  interfaces.py  introspection.py  introspection_test.py  log_config.py  main.py  plotting.py  plotting_test.py  retrospective.py  retrospective_test.py  sampling.py  sampling_test.py  synergy.py  synergy_test.py  test_synergy.py
src/batchie/batchers/: k_per_sample.py  k_per_sample_test.py
src/batchie/cli/: advance_retrospective_experiment.py  advance_retrospective_experiment_test.py  advance_retrospective_simulation.py  advance_retrospective_simulation_test.py  analyze_model_evaluation.py  analyze_model_evaluation_test.py  argument_parsing.py  argument_parsing_test.py  calculate_distance_matrix.py  calculate_distance_matrix_test.py  calculate_scores.py  calculate_scores_test.py  evaluate_model.py  evaluate_model_test.py  extract_experiment_metadata.py  extract_experiment_metadata_test.py  extract_screen_metadata.py  extract_screen_metadata_test.py  prepare_retrospective_experiment.py  prepare_retrospective_experiment_test.py  prepare_retrospective_simulation.py  prepare_retrospective_simulation_test.py  reveal_plate.py  reveal_plate_test.py  select_next_batch.py  select_next_batch_test.py  select_next_plate.py  select_next_plate_test.py  train_model.py  train_model_test.py
src/batchie/distance/: mse.py  mse_test.py
src/batchie/etl/: almanac.py  gdsc_sq.py  merck.py  mit.py  sarcoma.py
src/batchie/models/: grid_combo.py  grid_helper.py  kasey_nn_combo.py  kasey_nn_combo_test.py  main.py  main_test.py  nn_combo.py  nn_combo_test.py  sparse_combo.py  sparse_combo_interaction.py  sparse_combo_interaction_legacy.py  sparse_combo_interaction_legacy_test.py  sparse_combo_interaction_test.py  sparse_combo_legacy.py  sparse_combo_legacy_test.py  sparse_combo_test.py
src/batchie/plate_policies/: k_per_sample.py  k_per_sample_test.py
src/batchie/policies/: k_per_sample.py  k_per_sample_test.py
src/batchie/retrospective/: plates.py  plates_test.py
src/batchie/scoring/: gaussian_dbal.py  gaussian_dbal_test.py  main.py  main_test.py  rand.py  rand_test.py  random.py  size.py  size_test.py
(+98 files in other folders)
