[project]
name = "batchie"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
keywords = ["spatial", "expression", "rna"]
authors = [
    {name = "Chris Tosh", email = "toshc@mskcc.org" },
    {name = "Wesley Tansey", email = "TanseyW@mskcc.org" },
    {name = "Jeff Quinn", email = "quinnj2@mskcc.org" }
]

maintainers = [
    {name = "Jeff Quinn", email = "quinnj2@mskcc.org" },
    {name = "Chris Tosh", email = "toshc@mskcc.org" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "numpy>=1.2,<2",
    "pandas>=2,<3",
    "scipy>=1.7,<2",
    "tqdm",
    "h5py>=3.8,<4",
    "seaborn",
    "torch",
    "pyro-ppl",
    "pytest",
    "pytest-mock"
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["tox", "coverage"]

[project.urls]
"Homepage" = "https://github.com/tansey-lab/batchie"
"Documentation" = "https://batchie.readthedocs.io/en/latest/"
"Source" = "https://github.com/tansey-lab/batchie"

[project.scripts]
calculate_distance_matrix = "batchie.cli.calculate_distance_matrix:main"
calculate_scores = "batchie.cli.calculate_scores:main"
evaluate_model = "batchie.cli.evaluate_model:main"
extract_screen_metadata = "batchie.cli.extract_screen_metadata:main"
prepare_retrospective_simulation = "batchie.cli.prepare_retrospective_simulation:main"
reveal_plate = "batchie.cli.reveal_plate:main"
select_next_plate = "batchie.cli.select_next_plate:main"
train_model = "batchie.cli.train_model:main"
analyze_model_evaluation = "batchie.cli.analyze_model_evaluation:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
